--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -1,18 +1,35 @@
 <section class="section__home-hero">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h1>COLEGIO GUSTAVO ROJAS PINILLA</h1>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga molestias obcaecati sequi, sed fugit inventore labore vitae quidem mollitia sint sapiente facere itaque, possimus quas atque, aliquam ducimus assumenda.
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod consectetur distinctio doloribus debitis! Unde eveniet facere saepe est corporis voluptatibus excepturi molestias quae nihil ipsa nam cum, beatae tempore. Accusantium!
-			</div>
-			
-		</div>
-
-		<div class="row">
-			<div class="col-md-3">
-				<button type="button" class="btn btn-outline-primary">Conócenos</button>
+	<div class="hero-container-text">
+		<h1>Colegio Rojas Pinilla</h1>
+		<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae ratione blanditiis doloremque animi, esse, ducimus vero dicta quasi maiores commodi, ad tempore eligendi. Libero fugiat architecto praesentium culpa, sit! Magni.</p>
+		<button class="btn btn-primary">Conoce mas</button>
+	</div>
+	<div class="hero-container-img">
+		<div class="cuadrado bottom"></div>
+		<div class="cuadrado top"></div>
+	</div>
+</section>
+<nav class="nav-container">
+	<div class="component">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<i class="fas fa-users"></i>
+					<h5>Conocenos</h5>
+				</div>
+				<div class="col-md-3">
+					<i class="fas fa-thumbtack"></i>
+					<h5>Ubicanos</h5>
+				</div>
+				<div class="col-md-3">
+					<i class="fas fa-calendar-alt"></i>
+					<h5>Agenda</h5>
+				</div>
+				<div class="col-md-3">
+					<i class="fas fa-print"></i>
+					<h5>Documentos</h5>
+				</div>
 			</div>
 		</div>
 	</div>
-</section>
+</nav>
