--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm  navbar-dark justify-content-between">
+<nav class="navbar navbar-expand-sm fixed-top  navbar-dark justify-content-between">
 
   <!-- Brand/logo -->
   <div class="container">
