Dev: add section about and show map

--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -1,41 +1,50 @@
 <section class="section_home-about"> 
   <div class="container">
-    <div class="row border">
-      <div class="col-md-8">
-        <h1>Misión:</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum accusamus molestias illum rerum aspernatur perferendis quo amet, nihil dolores corrupti maxime, obcaecati optio dolore! Doloribus non culpa, repudiandae perspiciatis soluta!
-        </p>
+    <div class="row">
+      <div class="col-md-8 imagen-about1 ">
+        
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4  ">
+        <div class="container-text">
+          <h1>Misión:</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum accusamus molestias illum rerum aspernatur perferendis quo amet, nihil dolores corrupti maxime, obcaecati optio dolore! Doloribus non culpa, repudiandae perspiciatis soluta!
+          </p>
+          <div class="cuadrado"></div>
+        </div>
       </div>
     </div>
 
-    <div class="row border">
+    <div class="row ">
       <div class="col-md-4 ">    
+        <div style="right: -130px; z-index: 200; box-shadow: 1px 2px 13px -3px grey" class="container-text">
+          <h1>Vision:</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum accusamus molestias illum rerum aspernatur perferendis quo amet, nihil dolores corrupti maxime, obcaecati optio dolore! Doloribus non culpa, repudiandae perspiciatis soluta!
+          </p>
+          <div style="left: -39px; bottom: -96px;" class="cuadrado"></div>
+        </div>
       </div>
-      <div class="col-md-8">
-        <h1>
-          Vision
-        </h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure illum fugiat, dolores quam sit nisi quis accusannon ullam fuga obcaecati quisquam! Atque voluptatem cumque tenetur ex tempore velit itaque.
-        </p>
-      </div>
-    </div>
-    <div class="row border">
-      <div class="col-md-8 ">
-        <h1>
-          P.E.I
-        </h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam labore neque sit a minus et aliquid fugiat expedita, unde. Nemo harum deleniti quos provident non! Quibusdam dolorem, distinctio quo voluptates.
-        </p>
-      </div>
-      <div class="col-md-4 ">
+      <div class="col-md-8 imagen-about2">
         
       </div>
     </div>
+    
+    <div class="row">
+      <div class="col-md-8 imagen-about3 ">
+        
+      </div>
+      <div class="col-md-4  ">
+        <div class="container-text">
+          <h1>PEI:</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum accusamus molestias illum rerum aspernatur perferendis quo amet, nihil dolores corrupti maxime, obcaecati optio dolore! Doloribus non culpa, repudiandae perspiciatis soluta!
+          </p>
+          <div class="cuadrado"></div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </section>
 
