--- a/app/assets/stylesheets/home/about.scss
+++ b/app/assets/stylesheets/home/about.scss
@@ -1,16 +1,54 @@
 .section_home-about{
-
 	border:2px solid red;
 	height:auto;
 	padding:50px 0px;
 
 	.row{
-		margin-top:50px;
-		border-radius:25px;
-		box-shadow:0px 0px 10px grey;
+		margin-top:80px;
 		padding:20px;
-		
+		height: 400px;
 	}
-
+	.imagen-about1{
+		background-image: asset_url("about.jpg");
+		background-position: center;
+		background-size: cover;
+	}
+	.imagen-about2{
+		background-image: asset_url("about2.jpg");
+		background-position: center;
+		background-size: cover;
+	}
+	.imagen-about3{
+		background-image: asset_url("about3.jpg");
+		background-position: center;
+		background-size: cover;
+	}
+	.col-md-4{
+		position: relative;
+		.container-text{
+			left: -130px;
+	    background-color: white;
+	    top: 16px;
+	    border-radius: 20px;
+	    height: 326px;
+	    display: flex;
+	    justify-content: center;
+	    flex-direction: column;
+	    position: absolute;
+	    padding: 22px;
+	    box-shadow: 5px 3px 13px -3px grey;
+		}
+		.cuadrado{
+			position: absolute;
+	    right: -39px;
+	    bottom: -59px;
+	    width: 150px;
+	    height: 150px;
+	    background-color: #3363C2;
+		}
+	}
+	.col-md-8{
+		border-radius: 20px 0px 0px 20px;
+	}
 }
 
