--- a/app/views/home/_mapa.html.erb
+++ b/app/views/home/_mapa.html.erb
@@ -1,10 +1,7 @@
 <section class="section_mapa">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 border">
-				<h1>MAPA</h1>
-				<img src="https://wallpaperplay.com/walls/full/f/6/7/234999.jpg" width="1000px">
-			</div>
-		</div>	
-	</div>	
+	<div id='map' style='width: 100%; height:500px;'></div>
 </section>
+
+<script>
+	map();
+</script>
