--- a/app/assets/stylesheets/home/hero.scss
+++ b/app/assets/stylesheets/home/hero.scss
@@ -1,72 +1,27 @@
-.section__home-hero{
-	height: 500px;
-	display: flex;
-	background-color: #3363C2; 
-	.hero-container-text{
-		width: 40%;
-		height: 100%;
-		display: flex;
-		justify-content: center;
-		flex-direction: column;
-		padding: 0px 50px;
-		color: white;
-		h1{
-			color: white;
-		}
-		.btn{
-			width: 22%;
-		}
-	}
-	.hero-container-img{
-		width: 55%;
-		height: 100%;
-		background-image: asset_url("hero5.jpg");
-		background-position: contain;
-		background-position: center;
-		position: relative;
-		.cuadrado{
-			position: absolute;
-			width: 150px;
-			height: 150px;
-			background-color: #3363C2;
-		}
-		.bottom{
-			bottom: 0px;
-			left: 0px;
-		}
-		.top{
-			right: 0px;
-			top: 0px;
-		}
-	}
+
+.line-1{
+  position: relative;
+  top: 50%;  
+  width: 100%;
+  margin: 0 auto;
+  border-right: 2px solid rgba(255,255,255,.75);
+  font-size: 180%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-50%);    
 }
 
-.nav-container{
-	background: #3363C2;
-	height: 100px;
-  display: flex;
-  justify-content: center;
-  top: 0;
-  position: sticky;
-  z-index: 2000;
-  padding: 10px 0px;
-	.component{
-		background-color:white;
-		width: 63%;
-		align-items: center;
-	  display: flex;
-	  text-align: center;
-	  cursor: pointer;
-	  border-radius: 20px;
-	  .col-md-3{
-		  height: 78px;
-	    display: flex;
-	    align-items: center;
-	    flex-direction: column;
-	    justify-content: center;
-	  }
-	  .col-md-3:hover{
-			background-color: grey;
-	  }
-	}
+/* Animation */
+.anim-typewriter{
+  animation: typewriter 4s steps(44) 1s 1 normal both,
+  blinkTextCursor 500ms steps(44) infinite normal;
+}
+@keyframes typewriter{
+  from{width: 0;}
+  to{width: 70%;}
+}
+@keyframes blinkTextCursor{
+  from{border-right-color: rgba(255,255,255,.75);}
+  to{border-right-color: transparent;}
 }
