--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,58 +1,40 @@
-<footer class="footer">
-	<div class="container">
-	    <div class="row">
-			<div class="col-md-4 border">
-				<img src="https://wallpaperplay.com/walls/full/9/f/c/34779.jpg" width="320px">	
-			</div>
-			<div class="col-md-4 border">
-				<ul>
-					<li>
-						<h4>
-							Conocenos
-						</h4>
-					</li>
-					<li>
-						<h4>
-							Contáctanos
-						</h4>
-					</li>
-					<li>
-						<h4>
-							Ubícanos
-						</h4>
-					</li>
-				</ul>
-			</div>
-			<div class="col-md-4 border">
-				<div class="container">
-				    <h3>
-				     Ingrese 
-			        </h3>
-					    <div class="form-group">
-							<label for="email">
-							    <b>
-							      Nombre
-							    </b>
-							 </label>
-						      	<input type="email" class="form-control" id="email" placeholder="Escriba su nombre" name="email">
-					    </div>
-					    <div class="form-group">
-					      <label for="pwd">
-					        <b>
-					      	   Correo Electrónico
-					      	</b>
+<!-- Footer -->
+  <footer class="footer text-center">
+    <div class="container">
+      <div class="row">
 
-					      </label>
-					      <input type="password" class="form-control" id="pwd" placeholder="Escriba su correo " name="pswd">
-					    </div>
-					    <div class="form-group form-check">
-					    </div>
-					    <button type="submit" class="btn btn-primary">
-					    	 Ingresar
-					    </button>
-					  </form>
-			</div>
-			</div>
-		</div>
-	</div>
-</footer>
+        <!-- Footer Location -->
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Location</h4>
+          <p class="lead mb-0">2215 John Daniel Drive
+            <br>Clark, MO 65243</p>
+        </div>
+
+        <!-- Footer Social Icons -->
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Around the Web</h4>
+          <a class="btn btn-outline-light btn-social mx-1" href="#">
+            <i class="fab fa-fw fa-facebook-f"></i>
+          </a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#">
+            <i class="fab fa-fw fa-twitter"></i>
+          </a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#">
+            <i class="fab fa-fw fa-linkedin-in"></i>
+          </a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#">
+            <i class="fab fa-fw fa-dribbble"></i>
+          </a>
+        </div>
+
+        <!-- Footer About Text -->
+        <div class="col-lg-4">
+          <h4 class="text-uppercase mb-4">About Freelancer</h4>
+          <p class="lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by
+            <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+        </div>
+
+      </div>
+    </div>
+  </footer>
+<!-- Footer -->
