--- a/app/assets/stylesheets/home/hero.scss
+++ b/app/assets/stylesheets/home/hero.scss
@@ -1,4 +1,26 @@
 
+.section__home-hero{
+  height: 760px;
+  background-image: asset_url("about2.jpg");
+  background-size: cover;
+  background-position: 30% 71%;
+  background-attachment: fixed;
+  position: relative;
+  .overlay-hero{
+    background-color: rgba(33, 97, 140,0.5);
+    z-index: 10;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+
 .line-1{
   position: relative;
   top: 50%;  
