--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,6 +1,10 @@
 .navbar{
-	background:#3363C2;
 	border-radius:2.8px; 
+}
+
+.bg-nav{
+	background-color: #21618c;
+	transition: background-color 3s;
 }
 
 h1{
