Creacion de vista de eventos, desarrollo se la seccion about del home

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,8 @@
  //Styles for view center interesting
  @import 'center_interesting/index';
 
+ //Styles for view events
+ @import 'events/index';
 
  
 
