--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -1,7 +1,7 @@
 <!-- Navigation -->
   <nav class="navbar navbar-expand-lg  text-uppercase fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Colegio Gustavo Rojas Pinilla</a>
+      <%= link_to "Colegio G.R.P", root_path, class: "navbar-brand js-scroll-trigger" %>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -12,10 +12,13 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
+            <%= link_to 'Centro Interés', center_interesings_path, class: "nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" %>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contacto</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <%= link_to 'Eventos', events_path, class: "nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" %>
           </li>
         </ul>
       </div>
