create crud in events with admin

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,10 @@
  @import "nav"; 
  @import "footer";
 
+ //Styles for Admin
+ @import 'admin/partials';
+ @import 'admin/events';
+
 
 /*!
  * Start Bootstrap - Freelancer v5.1.3 (https://startbootstrap.com/template-overviews/freelancer)
