--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,1 +1,41 @@
 <h1>Index Eventos Admin</h1>
+
+
+<h1>Eventos</h1>
+
+<%= link_to 'Crear un nuevo evento', new_admin_event_path, class: "btn btn-primary" %>
+
+
+<table class="table table-dark table-hover">
+    <thead>
+	    <tr>
+	      <th>Id</th>
+	      <th>Titulo</th>
+	      <th>Descripción</th>
+	      <th>header</th>
+	      <th></th>
+	    </tr>
+  	</thead>
+    <tbody>
+      <% @events.each do |evento| %>
+      <tr>
+      	<td><%= evento.id %></td>
+        <td><%= evento.title %></td>
+        <td><%= evento.description %></td>
+        <td><%= evento.header_events %></td>
+        <td>
+          <%= link_to "Ver",   admin_event_path(evento), class: "btn btn-info" %>
+          <%= link_to "Editar", edit_admin_event_path(evento) ,class: "btn btn-warning" %>
+          <%= link_to "Eliminar", admin_event_path(evento), method: :delete, data: { confirm: "¿Estás seguro de eliminar este evento?" }, class: "btn btn-danger" %>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+
+<script>
+  $("#menu-toggle").click(function(e) {
+    e.preventDefault();
+    $("#wrapper").toggleClass("toggled");
+  });
+</script>
