--- a/app/views/events/_content.html.erb
+++ b/app/views/events/_content.html.erb
@@ -10,8 +10,8 @@
 
     <% @events.each do |event| %>
       <div class="col-lg-4 col-sm-6 mb-4">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <div class="card h-100 hvr-shadow">
+          <%= image_tag ( event.img ), class: "card-img-top" %>
           <div class="card-body">
             <span> <%= event.date_event %> </span>
             <h4 class="card-title">
