Dev: development create view contact

--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
               <%= f.label :img, "Direccion de la imagen" %><br>
-              <%= f.text_field :img, placeholder: "Escribe la Url de la imagen del evento", class: "form-control" %>
+              <%= f.file_field :img  %>
             </div>
 
             <div>
