--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -17,17 +17,15 @@
               El Colegio
             <div class="dropdown-menu">
               <%= link_to 'Conocenos', center_interesings_path, class: "dropdown-item" %>
-              <%= link_to 'Mision, Vision y P.E.I', events_path, class: "dropdown-item" %>
               <%= link_to 'Eventos', events_path, class: "dropdown-item" %>
               <%= link_to 'Centro Interés', center_interesings_path, class: "dropdown-item" %>
-              <%= link_to 'Circulares', center_interesings_path, class: "dropdown-item" %>
             </div>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <%= link_to 'Galeria', root_path, class: "nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" %>
+            <%= link_to 'Galeria', galleries_path, class: "nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" %>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <%= link_to 'Ubiquenos', root_path, class: "nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" %>
+            <%= link_to 'Contactenos', root_path, class: "nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" %>
           </li>
           <% if signed_in? %>
             <li class="nav-item mx-0 mx-lg-1">
