--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -4,7 +4,7 @@
 			<br><br>
 		<div class="row">
 	        <div class="col-md-7">
-	            <%= image_tag (@event.img), class: "img-fluid"%>
+	            <%= image_tag @event.img.thumb.url, class: "figure-img img-fluid- rounded"  %>
 	        </div>
 	        <div class="col-md-5">
 	          <span>Fecha del evento: <strong><%= @event.date_event %></strong></span>
