--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -2,12 +2,14 @@
 <div class="bg-primary text-white border-right" id="sidebar-wrapper">
   <div class="sidebar-heading">
   	<div class="container">
-  		<h1>Logo</h1>	
+  		<%= link_to admin_root_path do  %>
+			<h3>Admin Colegio GRP</h3>	
+  		<% end %>
   	</div>
 	<div class="list-group list-group-flush">
 		<br>
 		<div class="form-group">
-			<%= link_to "Home", root_path, class: "text-white" %>
+			<%= link_to "Inicio del Admin", admin_root_path, class: "text-white" %>
 		</div>
 		<br>
 		<div class="form-group">
@@ -16,6 +18,9 @@
 		<br>
 		<div class="form-group">
 			<%= link_to "Centro de intereses", admin_centros_path, class: " text-white" %>
+		</div>
+		<div class="form-group">
+			<%= link_to "Galeria", admin_images_path, class: " text-white" %>
 		</div>
   	</div>
   </div>
