--- a/app/views/events/_header-events.html.erb
+++ b/app/views/events/_header-events.html.erb
@@ -7,7 +7,7 @@
     <div class="row">
 
       <div class="col-md-8">
-        <%= image_tag ( @event.img ), class: "img-fluid" %>
+        <%= image_tag @event.img.url, class: "figure-img img-fluid rounded"  %>
       </div>
 
       <div class="col-md-4">
