create view conocenos

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,9 @@
  @import 'admin/partials';
  @import 'admin/events';
 
+ //Styles for conocenos
+ @import 'school';
+
 
 .card-signin {
   border: 0;
