--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -11,14 +11,14 @@
 				<% end %>
 			</div>
 			<div class="col-md-6 mt-5">
-				<%= link_to admin_events_path, class: "card hvr-grow-shadow" do  %>
+				<%= link_to admin_centros_path, class: "card hvr-grow-shadow" do  %>
 					<h3>Numero de centro de intereses</h3>
 					<span> <%=@CentroInteres %></span>
 				<% end %>
 			</div>
 			<br>
 			<div class="col-md-6 mt-5">
-				<%= link_to admin_events_path, class: "card hvr-grow-shadow" do  %>
+				<%= link_to admin_images_path, class: "card hvr-grow-shadow" do  %>
 					<h3>Numero de imagenes de la galeria</h3>
 					<span> <%=@images %></span>
 				<% end %>
