--- a/app/views/center_interesings/_body.html.erb
+++ b/app/views/center_interesings/_body.html.erb
@@ -9,7 +9,7 @@
   <% @CentroInteres.each do |centro| %>
     <div class="row">
       <div class="col-md-7">
-        <%= image_tag (centro.img), class: "img-fluid " %>
+        <%= image_tag centro.img.medium.url, class: "img-fluid rounded"  %>
       </div>
       <div class="col-md-5">
         <h3><%= centro.title %></h3>
