--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,7 +1,7 @@
 
-<header class="bg-primary text-white" style=" padding: 156px 0 100px;">
+<header class="bg-primary text-white" style=" padding: 156px 0 100px; background-image: url('https://cdn.pixabay.com/photo/2015/07/17/22/42/library-849797_960_720.jpg'); background-attachment: fixed; background-repeat: no-repeat; background-size: cover; background-position:center;">
     <div class="container text-center">
-      <h1>Contactanos</h1>
+      <h1 class="text-white">Contactanos</h1>
       <p class="lead">Queremos que seas parte de la familia Gustavista</p>
     </div>
   </header>
@@ -22,13 +22,16 @@
     </div>
   </section>
 
-  <section style=" padding: 150px 0;" id="services" class="bg-light">
+<section style="position: relative; background-image: url('https://cdn.pixabay.com/photo/2015/05/15/14/21/books-768426_960_720.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; padding: 150px 0;" id="services" class="bg-light">
+    <div class="overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background:#1b206182; ">
+      
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Circular Dia de la familia</h2>
-          <p>A continuacion dejamos la circular para descargar, sobre el dia de la familia</p>
-          <a  class= " btn alert-dark" href="circular_dia_familia.zip" download >Descarga la circular</a>
+          <h1 class="text-white">Circular Día de la familia</h1>
+          <p class="text-white lead">A continuacion dejamos la circular para descargar, sobre el dia de la familia</p>
+          <a  class= "btn-info btn" href="circular_dia_familia.zip" download >Descarga la circular</a>
         </div>
       </div>
     </div>
