--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 hvr-float">
         <button type="button" data-toggle="modal" data-target="#myModalMision">
           <div class="card">
             <i class="far fa-eye"></i>
@@ -23,7 +23,7 @@
           </div>
         </button>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 hvr-float">
         <button type="button" data-toggle="modal" data-target="#myModalVision">
           <div class="card">
             <i class="fas fa-briefcase"></i>
@@ -31,7 +31,7 @@
           </div>
         </button>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 hvr-float">
         <button type="button" data-toggle="modal" data-target="#myModalPEI">
           <div class="card">
             <i class="fas fa-book"></i>
@@ -46,7 +46,7 @@
 
 
 <!-- The Modal Mision -->
-  <div class="modal" id="myModalMision">
+  <div class="modal fade" id="myModalMision">
     <div class="modal-dialog">
       <div class="modal-content">
       
@@ -70,7 +70,7 @@
   </div>
 
 <!-- The Modal Vision -->
-  <div class="modal" id="myModalVision">
+  <div class="modal fade" id="myModalVision">
     <div class="modal-dialog">
       <div class="modal-content">
       
@@ -94,7 +94,7 @@
   </div>
 
   <!-- The Modal Vision -->
-  <div class="modal" id="myModalPEI">
+  <div class="modal fade" id="myModalPEI">
     <div class="modal-dialog">
       <div class="modal-content">
       
