--- a/app/views/school/index.html.erb
+++ b/app/views/school/index.html.erb
@@ -1,8 +1,8 @@
 <div class="section__conocenos">
-		<header class="bg-primary text-white">
+	<header class="bg-primary text-white" style="background-image: url('https://cdn.pixabay.com/photo/2015/12/01/15/43/black-1072366_960_720.jpg')">
 	  <div class="container text-center">
 	    <h1 class="solo">COLEGIO GUSTAVO  ROJAS PINILLA</h1>
-	    <p class="lead"><h2 class="hola">CONÓCENOS</h2></p>
+	    <p class="lead"><h2 class="text-white">CONÓCENOS</h2></p>
 	  </div>
 	</header>
 
