--- a/app/views/admin/centros/edit.html.erb
+++ b/app/views/admin/centros/edit.html.erb
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
               <%= f.label :img, "Direccion de la imagen" %><br>
-              <%= f.text_field :img, placeholder: "Escribe la Url de la imagen del centro de interes", class: "form-control" %>
+              <%= f.file_field :img  %>
             </div>
 
             <div>
