--- a/app/views/admin/centros/index.html.erb
+++ b/app/views/admin/centros/index.html.erb
@@ -8,7 +8,7 @@
     <div class="card m-3">
     <div class="row p-3">
       <div class="col-md-6">
-        <%= image_tag(centro.img, class: "img-fluid") %>
+        <%= image_tag centro.img.medium.url, class: "figure-img img-fluid rounded"  %>
       </div>
       <div class="col-md-5">
         <h3><%= centro.title %></h3>
