--- a/app/views/admin/centros/show.html.erb
+++ b/app/views/admin/centros/show.html.erb
@@ -1,6 +1,6 @@
 <div class="col-lg-6 mb-4">
   <div class="card h-100">
-    <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+    <%= image_tag @CentroIntere.img.medium.url, class: "card-img-top"  %>
     <div class="card-body">
       <h4 class="card-title">
         <a href="#"><%= @CentroIntere.title  %></a>
